# architect-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  SEGUIMIENTO-V1.md  SEGUIMIENTO.md  config.example.yaml  pyproject.toml
.claude/: settings.local.json
docs/: README.md  agents-and-modes.md  ai-guide.md  architecture.md  auto-review.md  casos-de-uso.md  ci-cd-integration.md  config-reference.md  containers.md  core-loop.md  data-models.md  eval.md  extending.md  fast-usage.md  good-practices.md  health.md  logging.md  parallel.md  pipelines.md  prompt-engineering.md  ralph-loop.md  reports.md  security.md  telemetry.md  testing.md  tools-and-execution.md  troubleshooting.md  usage.md
scripts/: test_config_loader.py  test_integration.py  test_parallel_execution.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase3.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_v3_m1.py  test_v3_m4.py  test_v3_m5.py
src/architect/: __init__.py  __main__.py  cli.py
src/architect/agents/: __init__.py  prompts.py  registry.py  reviewer.py
src/architect/config/: __init__.py  (+3 more)
tests/test_bugfixes/: test_bugfixes.py
tests/test_competitive/: test_competitive.py
tests/test_dispatch/: test_dispatch.py
tests/test_guardrails/: test_guardrails.py
tests/test_health/: test_health.py
tests/test_memory/: test_memory.py
tests/test_parallel/: test_parallel.py
tests/test_pipelines/: test_pipelines.py
tests/test_presets/: test_presets.py
tests/test_ralph/: test_ralph.py
tests/test_reports/: test_reports.py
tests/test_reviewer/: test_reviewer.py
tests/test_skills/: test_skills.py
tests/test_telemetry/: test_telemetry.py
(+57 files in other folders)
